# Foxel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  compose.yaml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: docker.yml  release-drafter.yml
api/: middleware.py  response.py  routers.py
api/routes/: adapters.py  auth.py  backup.py  config.py  logs.py  mounts.py  plugins.py  processors.py  search.py  share.py  tasks.py  vector_db.py  virtual_fs.py  webdav.py
db/: __init__.py  session.py
models/: __init__.py  database.py
schemas/: __init__.py  adapters.py  fs.py  mounts.py  plugins.py  tasks.py
services/: ai.py  auth.py  backup.py  config.py  logging.py  share.py  task_queue.py  tasks.py  thumbnail.py  vector_db.py  virtual_fs.py
services/adapters/: base.py  local.py  onedrive.py  quark.py  registry.py  s3.py  telegram.py  webdav.py
services/middleware/: exception_handler.py  logging_middleware.py
services/processors/: base.py  image_watermark.py  registry.py  vector_index.py
setup/: foxel.sh
web/: index.html  package.json
web/src/: App.tsx  global.css  main.tsx  theme.ts
web/src/api/: adapters.ts  auth.ts  backup.ts  client.ts  config.ts  logs.ts  pluginCenter.ts  plugins.ts  processors.ts  share.ts  tasks.ts  vectorDB.ts  vfs.ts
web/src/apps/: AppWindowsLayer.tsx  registry.ts  types.ts
web/src/apps/ImageViewer/: ImageViewer.tsx  index.ts
web/src/apps/OfficeViewer/: OfficeViewer.tsx  index.ts
web/src/apps/PdfViewer/: PdfViewer.tsx  index.ts
web/src/apps/PluginHost/: index.tsx
web/src/apps/TextEditor/: TextEditor.tsx  index.ts
web/src/components/: LanguageSwitcher.tsx  PageCard.tsx  ProcessorConfigForm.tsx
web/src/contexts/: AppWindowsContext.tsx  AuthContext.tsx  SystemContext.tsx  ThemeContext.tsx
web/src/hooks/: useAsyncSafeEffect.ts
web/src/i18n/: index.tsx
web/src/layout/: SearchDialog.tsx  SideNav.tsx  TopHeader.tsx  nav.ts
web/src/pages/: AdaptersPage.tsx  LoginPage.tsx  LogsPage.tsx  OfflineDownloadPage.tsx  PluginsPage.tsx  PublicSharePage.tsx  SetupPage.tsx  SharePage.tsx  TasksPage.tsx
web/src/plugins/: runtime.ts
web/src/router/: LayoutShell.tsx  index.tsx
web/src/styles/: settings-tabs.css  sider-menu.css
(+34 files in other folders)
