[project]
name = "foxel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3==15.1.0",
    "aiobotocore==2.24.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aioitertools==0.12.0",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asyncclick==8.2.2.2",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "boto3==1.39.11",
    "botocore==1.39.11",
    "certifi==2025.8.3",
    "click==8.2.1",
    "dictdiffer==0.9.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "frozenlist==1.7.0",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "iso8601==2.1.0",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "milvus-lite==2.5.1",
    "multidict==6.6.4",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "passlib==1.7.4",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "pyaes==1.6.1",
    "pyasn1==0.6.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymilvus==2.6.0",
    "pypika-tortoise==0.6.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rawpy==0.25.1",
    "rich==14.1.0",
    "rich-toolkit==0.15.0",
    "rignore==0.6.4",
    "rsa==4.9.1",
    "s3transfer==0.13.1",
    "sentry-sdk==2.35.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "telethon==1.40.0",
    "tortoise-orm==0.25.1",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "yarl==1.20.1",
]
